fix: adjusted font sizes in filter styles for improved readability

--- a/open-ecommerce/src/components/css/filter.css
+++ b/open-ecommerce/src/components/css/filter.css
@@ -10,7 +10,7 @@
 .products-section h1 {
     margin-top: 10px;
     margin-bottom: 10px;
-    font-size: 34px;
+    font-size: 30px;
     font-weight: 400;
 }
 
@@ -28,10 +28,6 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-}
-
-.filter-container-text p {
-    font-size: 20px;
 }
 
 .filter-section {
@@ -66,7 +62,7 @@
 }
 
 .filter-input .arrow-icon {
-    font-size: 18px;
+    font-size: 16px;
     margin-left: 10px;
 }
 
